--- a/frontend/react-web/.editorconfig
+++ b/frontend/react-web/.editorconfig
@@ -3,8 +3,10 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
-# charset = utf-8
+charset = utf-8
 end_of_line = lf
+trim_trailing_whitespace = true
 insert_final_newline = true
 tab_width = 2
 indent_size = 2
+indent_style = space
