--- a/frontend/react-web/package.json
+++ b/frontend/react-web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.17.7",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "date-fns": "^3.1.0",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.1",
     "sass": "^1.69.7",
+    "sonner": "^1.3.1",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
