--- a/frontend/react-web/package.json
+++ b/frontend/react-web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.17.7",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^3.1.0",
