ADD person search endpoint + implement on frontend "Eesnimi" field.

--- a/frontend/react-web/package.json
+++ b/frontend/react-web/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^3.1.0",
     "file-loader": "^6.2.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.25.0",
@@ -28,6 +29,7 @@
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.17",
